terraform-security-issues

--- a/terraform-security-issues/The Most Common Terraform Security Issues in 1000 GitHub Open Source Projects.ipynb
+++ b/terraform-security-issues/The Most Common Terraform Security Issues in 1000 GitHub Open Source Projects.ipynb
@@ -44,13 +44,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ec5ab79d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# paste your GitHub Personal Access Token here, as described in the 'Prerequesites' section\n",
-    "gh_token = \"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\""
+    "gh_token = \"<pase_your_token_here>\""
    ]
   },
   {
