terraform-security-issues

--- a/terraform-security-issues/The Most Common Terraform Security Issues in 1000 GitHub Open Source Projects.ipynb
+++ b/terraform-security-issues/The Most Common Terraform Security Issues in 1000 GitHub Open Source Projects.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# The Most Common Terraform Security Issues in 1000 GitHub Open Source Projects\n",
     "\n",
-    "This Jupyter notebook is the accompanying resource to the cloudlines.de blog article [Working Title](...). Read the blog article for more details and interpretation of the results."
+    "This Jupyter notebook is the accompanying resource to the cloudlines.de blog article [The Most Common Terraform Security Issues in 1000 GitHub Open Source Projects](https://cloudlines.de/posts/the-most-common-terraform-security-issues-in-1000-github-open-source-projects/). Read the blog article for more details and interpretation of the results."
    ]
   },
   {
@@ -1403,7 +1403,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1417,7 +1417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
